platform/registry/harbor-istio-gw.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: harbor-gateway
  namespace: harbor
spec:
  selector:
    istio: ingressgateway # use Istio default ingress gateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "k8s-istioing-phoenixa-873394dda6-1066746258.us-east-1.elb.amazonaws.com"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: harbor-vs
  namespace: harbor
spec:
  hosts:
  - "k8s-istioing-phoenixa-873394dda6-1066746258.us-east-1.elb.amazonaws.com"
  gateways:
  - harbor-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: harbor-core
        port:
          number: 80
