platform/registry/harbor-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: harbor-vs
  namespace: harbor
spec:
  hosts:
  - "k8s-istioing-phoenixa-873394dda6-1066746258.us-east-1.elb.amazonaws.com"
  gateways:
  - istio-ingress/main-gateway
  http:
  # Route for the Harbor Portal (UI)
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: harbor-portal
        port:
          number: 80
  # Route for the Harbor Core API
  - match:
    - uri:
        prefix: /api
    - uri:
        prefix: /service
    route:
    - destination:
        host: harbor-core
        port:
          number: 80
  # Route for the Docker Registry API (v2)
  - match:
    - uri:
        prefix: /v2
    route:
    - destination:
        host: harbor-registry
        port:
          number: 5000
